added the missing products

--- a/beans-detail.html
+++ b/beans-detail.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h2 class="text-center mb-4"> Detail</h2>
+        <h2 class="text-center mb-4">Product Detail</h2>
         <div class="card shadow">
             <img src="images/beans.jpg" class="card-img-top product-image" alt="Beans">
             <div class="card-body">
