--- a/cowpeas-detail.html
+++ b/cowpeas-detail.html
@@ -3,28 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karibu Groceries - Product Detail</title>
+    <title>Karibu Groceries - Cowpeas Detail</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
     <div class="container">
-        <h2 class="text-center mb-4"> Detail</h2>
+        <h2 class="text-center mb-4">Product Detail</h2>
         <div class="card shadow">
-            <img src="images/beans.jpg" class="card-img-top product-image" alt="Beans">
+            <img src="images/cowpeas.jpg" class="card-img-top product-image" alt="Cowpeas">
             <div class="card-body">
-                <h5 class="card-title text-primary">Beans</h5>
+                <h5 class="card-title text-primary">Cowpeas</h5>
                 <div class="row mt-3">
                     <div class="col-md-6">
-                        <p class="card-text"><strong>Time of Produce:</strong> 10:00 AM</p>
-                        <p class="card-text"><strong>Tonnage:</strong> 1000 kg</p>
-                        <p class="card-text"><strong>Cost:</strong> 2000 UgX</p>
-                        <p class="card-text"><strong>Dealer:</strong> Owor</p>
+                        <p class="card-text"><strong>Time of Produce:</strong> 09:15 AM</p>
+                        <p class="card-text"><strong>Tonnage:</strong> 900 kg</p>
+                        <p class="card-text"><strong>Cost:</strong> 2500 UgX</p>
+                        <p class="card-text"><strong>Dealer:</strong> Wasswa</p>
                     </div>
                     <div class="col-md-6">
                         <p class="card-text"><strong>Branch:</strong> Ntinda</p>
-                        <p class="card-text"><strong>Contact:</strong> 0700994532</p>
-                        <p class="card-text"><strong>Price to be sold at:</strong> 2500 UgX</p>
+                        <p class="card-text"><strong>Contact:</strong> 0745678901</p>
+                        <p class="card-text"><strong>Price to be sold at:</strong> 3000 UgX</p>
                     </div>
                 </div>
             </div>
@@ -32,4 +32,4 @@
         <a href="product.html" class="btn btn-primary mt-4">Back to Products</a>
     </div>
 </body>
-</html>
+</html> 
