--- a/product.html
+++ b/product.html
@@ -20,9 +20,14 @@
             <li class="list-group-item">
                 <a href="maize-detail.html">Maize</a>
             </li>
-            <!-- More products can be added here -->
+            <li class="list-group-item">
+                <a href="soyabeans-detail.html">Soyabeans</a>
+            </li>
+            <li class="list-group-item">
+                <a href="cowpeas-detail.html">Cowpeas</a>
+            </li>
         </ul>
-        <a href="home.html" class="btn btn-primary mt-3">Back to Home</a>
+        <a href="home.html" class="btn btn-primary mt-4">Back to Home</a>
     </div>
 </body>
 </html>
