--- a/index.html/beans-detail.html
+++ b/index.html/beans-detail.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Karibu Groceries - Product Detail</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
     <div class="container">
         <h2 class="text-center mb-4">Product Detail</h2>
         <div class="card shadow">
-            <img src="images/beans.jpg" class="card-img-top product-image" alt="Beans">
+            <img src="../images/beans.jpg" class="card-img-top product-image" alt="Beans">
             <div class="card-body">
                 <h5 class="card-title text-primary">Beans</h5>
                 <div class="row mt-3">
@@ -29,7 +29,9 @@
                 </div>
             </div>
         </div>
-        <a href="product.html" class="btn btn-primary mt-4">Back to Products</a>
+        <div class="btn-container">
+            <a href="product.html" class="btn btn-primary">Back to Products</a>
+        </div>
     </div>
 </body>
 </html>
