--- a/index.html/home.html
+++ b/index.html/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Karibu Groceries - Home</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
     <style>
         body {
             background-color: #f8f9fa;
@@ -16,7 +16,7 @@
         }
     </style>
 </head>
-<body>
+<body>       
     <div class="container text-center">
         <img src="logo.png" alt="Karibu Groceries Logo" class="logo">
         <h1>Welcome to Karibu Groceries</h1>
