--- a/index.html/product.html
+++ b/index.html/product.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Karibu Groceries - Products</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
     <div class="container">
         <h2 class="text-center">Products</h2>
         <ul class="list-group">
             <li class="list-group-item">
-                <a href="product-detail.html">Beans</a>
+                <a href="beans-detail.html">Beans</a>
             </li>
             <li class="list-group-item">
                 <a href="gnuts-detail.html">G-nuts</a>
