--- a/index.html/sales-report.html
+++ b/index.html/sales-report.html
@@ -3,32 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karibu Groceries - Sales</title>
+    <title>Karibu Groceries - Sales Report</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="CSS/style.css">
-</head>
+    <link rel="stylesheet" href="../CSS/style.css">
+</head> 
 <body>
     <div class="container">
-        <h2 class="text-center">Sales</h2>
-        <table class="table">
+        <h2 class="text-center">Sales Report</h2>
+        <table>
             <thead>
                 <tr>
-                    <th>Product Name</th>
-                    <th>Tonnage (kg)</th>
-                    <th>Amount Paid (UgX)</th>
-                    <th>Buyer Name</th>
                     <th>Date</th>
+                    <th>Total Sales (UgX)</th>
+                    <th>Total Products Sold</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>Beans</td>
-                    <td>500</td>
-                    <td>1250000</td>
-                    <td>Jane</td>
                     <td>2025-16-02</td>
+                    <td>5000000</td>
+                    <td>200</td>
                 </tr>
-                <!-- More sales can be added here -->
+                <!-- More sales reports can be added here -->
             </tbody>
         </table>
     </div>
