--- a/index.html/credit-sales.html
+++ b/index.html/credit-sales.html
@@ -3,32 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karibu Groceries - Trusted Buyers</title>
+    <title>Karibu Groceries - Credit Sales</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="CSS/style.css">
-</head> 
+    <link rel="stylesheet" href="../CSS/style.css">
+</head>
 <body>
     <div class="container">
-        <h2 class="text-center">Trusted Buyers</h2>
+        <h2 class="text-center">Credit Sales</h2>
         <table class="table">
             <thead>
                 <tr>
                     <th>Buyer Name</th>
                     <th>National ID</th>
-                    <th>Contact </th>
+                    <th>Product Name</th>
+                    <th>Tonnage (kg)</th>
                     <th>Amount Due (UgX)</th>
                     <th>Due Date</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>Jane</td>
-                    <td>123456789</td>
-                    <td>0709876543</td>
-                    <td>150000</td>
+                    <td>Lastone</td>
+                    <td>987654321</td>
+                    <td>G-nuts</td>
+                    <td>300</td>
+                    <td>900000</td>
                     <td>2025-16-02</td>
                 </tr>
-                <!-- More trusted buyers can be added here -->
+                <!-- More credit sales can be added here -->
             </tbody>
         </table>
     </div>
