--- a/index.html/maize-detail.html
+++ b/index.html/maize-detail.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Karibu Groceries - Maize Detail</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
     <div class="container">
         <h2 class="text-center mb-4">Product Detail</h2>
         <div class="card shadow">
-            <img src="images/hl03pix-data.jpg" class="card-img-top product-image" alt="Maize">
+            <img src="../images/hl03pix-data.jpg" class="card-img-top product-image" alt="Maize">
             <div class="card-body">
                 <h5 class="card-title text-primary">Maize</h5>
                 <div class="row mt-3">
