--- a/html pages/logout.html
+++ b/html pages/logout.html
@@ -12,7 +12,7 @@
             <h1>Successfully Logged Out</h1>
             <p>Thank you for using our service. You have been successfully logged out.</p>
             <div style="margin-top: 2rem;">
-                <a href="home.html" class="btn btn-primary">Return to Home</a>
+                <a href="../index.html" class="btn btn-primary">Return to Home</a>
             </div>
         </div>
     </div>
