--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Karibu Groceries - Home</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <style>
         body {
             background-color: #f8f9fa;
@@ -20,8 +20,10 @@
     <div class="container text-center">
         <img src="logo.png" alt="Karibu Groceries Logo" class="logo">
         <h1>Welcome to Karibu Groceries</h1>
-        <a href="login.html" class="btn btn-primary">Login</a>
-        <a href="signup.html" class="btn btn-secondary">Sign Up</a>
+        <div class="btn-container">
+            <a href="html pages/login.html" class="btn btn-primary">Login</a>
+            <a href="html pages/signup.html" class="btn btn-success">Sign Up</a>
+        </div>
     </div>
 </body>
 </html>
